adil-parser/src/main/java/edu/sdsc/SQLPP/SQLPP.java
/* Generated By:JJTree&JavaCC: Do not edit this line. SQLPP.java */
package edu.sdsc.SQLPP;

import java.io.*;
import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import javax.json.Json;
import javax.json.JsonObject;
import javax.json.JsonObjectBuilder;
import javax.json.JsonArrayBuilder;



import edu.sdsc.awesome.adil.parser.StatementOperation.SQLPPUtil;


public class SQLPP/*@bgen(jjtree)*/implements SQLPPTreeConstants, SQLPPConstants {/*@bgen(jjtree)*/
  protected JJTSQLPPState jjtree = new JJTSQLPPState();public static void main(String[] args) {
    Reader sr = new StringReader(args[0]);
    JsonObjectBuilder js = Json.createObjectBuilder();
    SQLPP p = new SQLPP(sr);
    try {
      p.Expression(js);
    } catch (ParseException pe) {
      pe.printStackTrace();
    }
  }

  final public JsonObjectBuilder Expression(JsonObjectBuilder jObject) throws ParseException {
                                                           /*@bgen(jjtree) Expression */
                                                           ASTExpression jjtn000 = new ASTExpression(JJTEXPRESSION);
                                                           boolean jjtc000 = true;
                                                           jjtree.openNodeScope(jjtn000);JsonArrayBuilder sqlPlan = Json.createArrayBuilder();
    try {
      jj_consume_token(QUOT);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SELECT:
        case WITH:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
         JsonObjectBuilder tempjObject = Json.createObjectBuilder();
        tempjObject = Statement(tempjObject);
                                                                                                            sqlPlan.add(tempjObject.build());
        jj_consume_token(SEMICOLON);
      }
      jj_consume_token(QUOT);
   jObject.add("SQLPP", sqlPlan.build());
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
   {if (true) return jObject;}
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
    throw new Error("Missing return statement in function");
  }

  final public JsonObjectBuilder Statement(JsonObjectBuilder selectObject) throws ParseException {
                                                               /*@bgen(jjtree) Statement */
                                                               ASTStatement jjtn000 = new ASTStatement(JJTSTATEMENT);
                                                               boolean jjtc000 = true;
                                                               jjtree.openNodeScope(jjtn000);JsonArrayBuilder tempArray = Json.createArrayBuilder();JsonObjectBuilder tempjObject = Json.createObjectBuilder();
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SELECT:
        tempjObject = SelectStatement(tempjObject);
                                                              tempArray.add(tempjObject);
        break;
      case WITH:
        tempjObject = SelectStatementWith(tempjObject);
                                                                                                                                               tempArray.add(tempjObject);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
   selectObject.add("STATEMENT", tempArray.build());
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
   {if (true) return selectObject;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public JsonObjectBuilder SelectStatement(JsonObjectBuilder selectObject) throws ParseException {
                                                                     /*@bgen(jjtree) SelectStatement */
                                                                     ASTSelectStatement jjtn000 = new ASTSelectStatement(JJTSELECTSTATEMENT);
                                                                     boolean jjtc000 = true;
                                                                     jjtree.openNodeScope(jjtn000);Token aggrVar; boolean aggrFlag = false; Token groupName; Token limitValue; Token var; Token rename; Token srcName; Token srcrename;  boolean srcrenameFlag = false; Token groupBy = null; Token groupByRename = null; boolean groupByFlag=false;   List selectVar; JsonObjectBuilder renameTable = Json.createObjectBuilder(); selectVar = new ArrayList();
boolean selectRenameFlag = false; Token unnest; Token unnestRename = null; boolean unnestFlag = false; boolean exceptFlag = false; boolean limitFlag = false; Map valueObject = new HashMap(); Map groupByMap = new HashMap(); List groupList = new ArrayList(); boolean WHEREFlag = false;
    try {
      jj_consume_token(SELECT);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MUL:
        case IDENTIFIER:
        case FIELDNAME:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IDENTIFIER:
            var = jj_consume_token(IDENTIFIER);
            break;
          case FIELDNAME:
            var = jj_consume_token(FIELDNAME);
            break;
          case MUL:
            var = jj_consume_token(MUL);
            break;
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case AS:
            jj_consume_token(AS);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IDENTIFIER:
              rename = jj_consume_token(IDENTIFIER);
              break;
            case FIELDNAME:
              rename = jj_consume_token(FIELDNAME);
              break;
            default:
              jj_la1[3] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
                                                                                                                                                                         renameTable.add(var.image, rename.image) ;
                                                                                                                                                                                                                       selectRenameFlag = true;
            break;
          default:
            jj_la1[4] = jj_gen;
            ;
          }
                                                                                                                                                                                                                                                      selectVar.add(var.image);
                                                                                                                                                                                                                                                                                  valueObject.put("SelectVar", selectVar);
          break;
        case COUNT:
                                                                                                                                                                                                                                                                                                                                 List count = new ArrayList();
          Aggregate(count);
                                                                                                                                                                                                                                                                                                                                                                                  valueObject.put("AGGRON", "SELECT");
                                                                                                                                                                                                                                                                                                                                                                                                                        valueObject.put("AGGR", count); aggrFlag = true;
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COUNT:
        case MUL:
        case IDENTIFIER:
        case FIELDNAME:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_2;
        }
      }
      jj_consume_token(FROM);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        srcName = jj_consume_token(IDENTIFIER);
        break;
      case FIELDNAME:
        srcName = jj_consume_token(FIELDNAME);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                                valueObject.put("SRCNAME", srcName.image);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case FIELDNAME:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          srcrename = jj_consume_token(IDENTIFIER);
          break;
        case FIELDNAME:
          srcrename = jj_consume_token(FIELDNAME);
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                                                                                                                                                                   srcrenameFlag = true;
                                                                                                                                                                                                                          renameTable.add(srcName.image, srcrename.image);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UNNEST:
        jj_consume_token(UNNEST);
        unnest = jj_consume_token(FIELDNAME);
        unnestRename = jj_consume_token(IDENTIFIER);
                                                              unnestFlag = true;
                                                                                    valueObject.put("UNNESTName", unnest.image);valueObject.put("UNNESTReName", unnestRename.image);
                                                                                                                                                                                       renameTable.add("UNNEST::"+unnest.image, unnestRename.image) ;
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GROUP:
        jj_consume_token(GROUP);
        jj_consume_token(BY);
        label_3:
        while (true) {
          groupBy = jj_consume_token(FIELDNAME);
          label_4:
          while (true) {
            jj_consume_token(AS);
            groupByRename = jj_consume_token(IDENTIFIER);
                                                                             groupByMap.put(groupByRename.image, groupBy) ;
                                                                                                                               renameTable.add(groupBy.image, groupByRename.image) ;
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case AS:
              ;
              break;
            default:
              jj_la1[11] = jj_gen;
              break label_4;
            }
          }
                                                                                     groupByFlag = true;
                                                                                                            groupList.add(groupBy.image) ;
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FIELDNAME:
            ;
            break;
          default:
            jj_la1[12] = jj_gen;
            break label_3;
          }
        }
        jj_consume_token(GROUP);
        jj_consume_token(AS);
        groupName = jj_consume_token(IDENTIFIER);
                                                                                      valueObject.put("groupName", groupName.image);
                                                                                                                                      valueObject.put("groupBy", groupList);valueObject.put("groupByRename", groupByRename.image);
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
                 JsonObjectBuilder j2 = Json.createObjectBuilder();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFTPAREN:
        notINstatement(j2);
                                                                                         exceptFlag = true;selectObject.add("NOTIN", j2.build());
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IN:
        jj_consume_token(IN);
        jj_consume_token(LEFTPAREN);
                                                  JsonObjectBuilder j1 = SelectStatement(Json.createObjectBuilder()); selectObject.add("IN", j1);
                                                                                                                                                     exceptFlag = true;
        jj_consume_token(RIGHTPAREN);
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHERE:
        jj_consume_token(WHERE);
                                           JsonObjectBuilder j1 = Json.createObjectBuilder();
        j1 = GetConditionExpression(j1);
                                                                                                                                 selectObject.add("CONDITION", j1);
                                                                                                                                                                       exceptFlag = true;
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LIMIT:
        jj_consume_token(LIMIT);
        limitValue = jj_consume_token(INTEGER_LITERAL);
                                               limitFlag = true;
                                                                     valueObject.put("limitValue", limitValue.image);
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
     selectObject = SQLPPUtil.handelSelectStatement(selectObject, srcName.image, srcrenameFlag, selectRenameFlag,  unnestFlag,  groupByFlag, exceptFlag,limitFlag, aggrFlag, valueObject );
     selectObject.add("AKA", renameTable.build());
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
 {if (true) return selectObject;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }
